feat: added manifest

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Bingo</title>
+
+  <meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)">
+  <meta name="theme-color" content="#222" media="(prefers-color-scheme: dark)">
+  <meta property="og:description" content="A simple and customizable bingo app">
+  <meta property="og:title" content="Simple Bingo">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="manifest/screenshot.png">
+  <meta property="og:image:width" content="750">
+  <meta property="og:image:height" content="1334">
+
+  <link rel="manifest" href="manifest.json">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" type="image/x-png" href="favicon.png">
+  <link rel="shortcut icon" type="image/svg+xml" href="manifest/icon.svg">
 </head>
 
 <body>
